# rlc_new

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt  seed.py
api/: urls.py  views.py
auto_annotator/: alignment.py  annotator.py  classifier.py  edit.py  merger.py  text_processor.py
backup/: test.py
content/: admin.py  forms.py  models.py  urls.py  views.py
content/migrations/: 0001_initial.py
corpus/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
corpus/migrations/: 0001_initial.py  0002_alter_annotation_alt_alter_annotation_document_and_more.py  0002_alter_annotation_document_alter_annotation_guid_and_more.py  0002_rename_scale_author_language_level.py  0002_sentence_words_token_sentence_num_token_token_num.py  0003_alter_document_author_alter_document_body_and_more.py  0003_alter_sentence_options.py  0004_alter_author_dominant_language_and_more.py  0004_alter_sentence_options.py  0005_document_favorite.py  (+14 more)
data_import/: load.py
dev/: init.sh  seed_db.py
rlc_new/: asgi.py  settings.py  urls.py  wsgi.py
templates/: add_document.html  add_or_edit_document.html  annotate.html  author_card.html  base.html  create_article.html  document_card.html  documents.html  edit_author.html  edit_document.html  help.html  help_table.html  homepage.html  lexgram_search.html  lexgram_search_results.html  news.html  search.html  search_results.html  sentence_card.html  sidebar.html  sidebar_base.html  statistics.html  user_profile.html
(+60 files in other folders)
