[tool.poetry]
name = "rlc-new"
version = "0.1.0"
description = ""
authors = ["johann <vyavya2003@yandex.ru>"]
readme = "README.md"
packages = [{include = "rlc_new"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg = "^3.1.8"
black = "^23.3.0"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
